[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://sprite/enemy/enemy-big.png" type="Texture" id=2]
[ext_resource path="res://scene/explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/enemy.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.1699, 20.8973 )

[node name="boss" type="RigidBody2D"]
z_index = 1
z_as_relative = false
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )
explosion = ExtResource( 3 )
enemy = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[node name="ColorTimer" type="Timer" parent="."]

[node name="SpawnEnemy" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10.0908 )
z_index = 1
shape = SubResource( 2 )
[connection signal="timeout" from="ColorTimer" to="." method="_on_ColorTimer_timeout"]
[connection signal="timeout" from="SpawnEnemy" to="." method="_on_SpawnEnemy_timeout"]
